메인페이지 틀 완성

--- a/index_main.html
+++ b/index_main.html
@@ -22,7 +22,7 @@
 		<div id="wrap">
 			<div id="header">
 				<div class="logo">
-					<p><img src="images/logo.png"/></p>
+					<p>로고</p>
 				</div>
 			</div>	
 			<div id="content">
@@ -35,28 +35,28 @@
 					</iframe>
 				</div>
 				<div class="work">
-					<div class="now_time current_time">
+					<div class="current_time">
 						<p class="current_txt">현재시간</p>
 						<p class="time">오전 09:00:00</p>
 					</div>
 					<div class="work_btn">
-						<p class="in_office"><a data-toggle="modal" data-target="#modal_office"><img src="images/gps-ico.png"/>GPS 출근</a></p>
-						<p class="out_office"><a data-toggle="modal" data-target="#modal_office"><img src="images/wifi-ico.png"/>WiFi 출근</a></p>
+						<p><a data-toggle="modal" data-target="#modal_office">GPS 출근</a></p>
+						<p><a data-toggle="modal" data-target="#modal_office">WiFi 출근</a></p>
 						<!--<p><a href="#">PHOTO 출근</a></p>-->
 					</div>
 					<div class="adm_modify">
 						<p class="modify_btn"><a href="#">관리자 근태수정</a></p>
 					</div>
 					<div class="commute_info">
-						<div class="current_time in_time">
+						<div class="current_time in_office">
 							<p class="in_time current_txt">출근시간</p>
 							<p class="time">오전 09:00</p>
 						</div>
-						<div class="current_time out_time">
+						<div class="current_time out_office">
 							<p class="out_time current_txt">퇴근시간</p>
 							<p class="time">오후 18:00</p>
 						</div>
-						<div class="current_time total_time">
+						<div class="current_time office_time">
 							<p class="current_txt">근무시간</p>
 							<p class="time">09시간 00분</p>
 						</div>
@@ -66,8 +66,8 @@
 			<div id="footer">
 				<div class="footer_menu">
 					<ul>
-						<li class="home_ico"><a href="#"><span class="home_img">홈 이미지</span>홈</a></li>
-						<li class="report_ico"><a href="#"><span class="report_img">출퇴근기록</span>출퇴근기록</a></li>
+						<li class="home_ico"><a href="#">홈</a></li>
+						<li class="report_ico"><a href="#">출퇴근기록</a></li>
 					</ul>
 				</div>
 			</div>
