--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 						<p class="time">오전 09:00:00</p>
 					</div>
 					<div class="work_btn">
-						<p class="in_office"><a data-toggle="modal" data-target="#modal_office"><img src="images/gps-ico.png"/>GPS 출근</a></p>
-						<p class="out_office"><a data-toggle="modal" data-target="#modal_office"><img src="images/wifi-ico.png"/>WiFi 출근</a></p>
+						<p class="in_office"><a data-toggle="modal" data-target="#modal_in"><img src="images/gps-ico.png"/>GPS 출근</a></p>
+						<p class="out_office"><a data-toggle="modal" data-target="#modal_out"><img src="images/wifi-ico.png"/>WiFi 출근</a></p>
 						<!--<p><a href="#">PHOTO 출근</a></p>-->
 					</div>
 					<div class="adm_modify">
@@ -72,9 +72,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal fade modal_office" id="modal_office" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal fade modal_in" id="modal_in" tabindex="-1" role="dialog" aria-hidden="true">
 			<div class="modal-dialog">
-				<div class="modal-content animate-bottom">
+				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title">Modal title</h4>
@@ -86,8 +86,8 @@
 						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						<button type="button" class="btn btn-primary">Save changes</button>
 					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal-dialog -->
-		</div><!-- /.modal -->
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
