--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</div>
 					<div class="work_btn">
 						<p class="in_office"><a data-toggle="modal" data-target="#modal_in"><img src="images/gps-ico.png"/>GPS 출근</a></p>
-						<p class="out_office"><a data-toggle="modal" data-target="#modal_out"><img src="images/wifi-ico.png"/>WiFi 출근</a></p>
+						<p class="out_office"><a data-toggle="modal" data-target="#modal_in"><img src="images/wifi-ico.png"/>WiFi 출근</a></p>
 						<!--<p><a href="#">PHOTO 출근</a></p>-->
 					</div>
 					<div class="adm_modify">
@@ -72,19 +72,18 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal fade modal_in" id="modal_in" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal" id="modal_in" tabindex="-1">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">Modal title</h4>
+						<h4 class="modal-title">출근확인</h4>
 					</div>
 					<div class="modal-body">
-						<p>One fine body&hellip;</p>
+						<p>현재 시간은 <span class="green">오전 09:00</span> 입니다.<br>출근하시겠습니까?</p>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
+						<button type="button">출근하기</button>
 					</div>
 				</div>
 			</div>
