--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 		<!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/jquery.iwtInputClearButtonController-0.9.0.js"></script>
 	</head>
@@ -22,7 +21,7 @@
 		<div id="wrap">
 			<div id="header">
 				<div class="logo">
-					<p><img src="images/logo.png"/></p>
+					<p><span class="logo_img"><img src="images/logo.png"/></span></p>
 				</div>
 			</div>	
 			<div id="content">
@@ -45,7 +44,7 @@
 						<!--<p><a href="#">PHOTO 출근</a></p>-->
 					</div>
 					<div class="adm_modify">
-						<p class="modify_btn"><a href="#">관리자 근태수정</a></p>
+						<p class="modify_btn"><a href="#">근태기록 변경요청</a></p>
 					</div>
 					<div class="commute_info">
 						<div class="current_time in_time">
@@ -54,7 +53,7 @@
 						</div>
 						<div class="current_time out_time">
 							<p class="out_time current_txt">퇴근시간</p>
-							<p class="time">오후 18:00</p>
+							<p class="time">오후 06:00</p>
 						</div>
 						<div class="current_time total_time">
 							<p class="current_txt">근무시간</p>
@@ -66,8 +65,8 @@
 			<div id="footer">
 				<div class="footer_menu">
 					<ul>
-						<li class="home_ico"><a href="#"><span class="home_img">홈 이미지</span>홈</a></li>
-						<li class="report_ico"><a href="#"><span class="report_img">출퇴근기록</span>출퇴근기록</a></li>
+						<li class="home_ico on"><a href="index.html"><span class="home_img">홈 이미지</span>홈</a></li>
+						<li class="report_ico"><a href="page/record.html"><span class="report_img">출퇴근기록</span>출퇴근기록</a></li>
 					</ul>
 				</div>
 			</div>
