--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<h2 class="map_name">부산 엔로비 본사</h2>
 						<p class="address">부산 해운대구 센텀동로 99</p>
 					</div>
+					<!-- 구글 지도 -->
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2176.59326382032!2d129.1257132341467!3d35.17643996287786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sko!2skr!4v1597064551100!5m2!1sko!2skr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
 					</iframe>
 				</div>
@@ -44,7 +45,7 @@
 						<!--<p><a href="#">PHOTO 출근</a></p>-->
 					</div>
 					<div class="adm_modify">
-						<p class="modify_btn"><a href="#">근태기록 변경요청</a></p>
+						<p class="modify_btn"><a data-toggle="modal" data-target="#mon_modify">근태기록 변경요청</a></p>
 					</div>
 					<div class="commute_info">
 						<div class="current_time in_time">
@@ -71,6 +72,8 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- 출근 모달 -->
 		<div class="modal" id="modal_in" tabindex="-1">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -87,5 +90,77 @@
 				</div>
 			</div>
 		</div>
+		<!-- 출근 모달 끝 -->
+
+		<!-- 근태기록 수정 모달 -->
+		<div class="modal" id="mon_modify" backdrop="static" tabindex="-1">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">근태 기록변경 요청</h4>
+					</div>
+					<div class="modal-body">
+						<div class="modal-wrap">
+							<div class="now_info">
+								<div class="calendar">
+									<p><a href="#">2020.08.12 수요일</a></p>
+									<!--<p><input id="calendar" class="calendar" placeholder="2020. 08"/></p>-->
+								</div>
+								<div class="now">
+									<p class="txt_left">현 근무시간</p>
+									<p class="txt_right">9시간 00분<br><span class="modal_time">AM 09:00 - PM 06:00</span></p>
+								</div>
+								<div class="now">
+									<p class="txt_left">현 근무장소</p>
+									<p class="txt_right">서울 넷마블 본사</p>
+								</div>
+							</div>
+							<div class="work_form">
+								<h2>근태수정</h2>
+								<div class="work_modify">
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_on">출근</label>
+											<input type="time" name="keyword" class="form_box form-control" id="work_on" placeholder="출근시간 입력">
+											<button class="txt_clear btn">지우기</button>
+										</div>
+										<p class="invalid">출근시간을 입력 해 주세요.</p>
+									</div>
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_off">퇴근</label>
+											<input type="time" name="keyword" class="form_box form-control" id="work_off" placeholder="퇴근시간 입력">
+											<button class="txt_clear btn">지우기</button>
+										</div>
+										<p class="invalid">퇴근시간을 입력 해 주세요.</p>
+									</div>
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_location">출근장소</label>
+											<input type="text" name="keyword" class="form_box form-control" id="work_location" placeholder="출근장소 입력">
+											<button class="txt_clear btn">지우기</button>
+										</div>
+										<p class="invalid">출근장소를 입력 해 주세요.</p>
+									</div>
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_msg">요청사유</label>
+											<textarea type="text" rows="5"name="keyword" class="form_box form-control" id="work_msg" placeholder="요청사유"></textarea>
+											<button class="txt_clear btn">지우기</button>
+										</div>
+										<p class="invalid">요청사유를 입력 해 주세요.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button">신청하기</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- 근태기록 수정 모달 끝 -->
 	</body>
 </html>
