--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
 		<!-- 출근 모달 -->
 		<div class="modal" id="modal_in" tabindex="-1">
+			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -87,6 +88,7 @@
 						<button type="button">출근하기</button>
 					</div>
 				</div>
+			</div>
 		</div>
 		<!-- 출근 모달 끝 -->
 
