--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<p>현재 시간은 <span class="green">오전 09:00</span> 입니다.<br>출근하시겠습니까?</p>
 					</div>
 					<div class="modal-footer">
-						<button type="button">출근하기</button>
+						<button class="work_com" type="button">출근하기</button>
 					</div>
 				</div>
 			</div>
@@ -155,7 +155,7 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button">신청하기</button>
+					<button class="work_com" type="button">신청하기</button>
 				</div>
 			</div>
 		</div>
