--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="work">
 					<div class="now_time current_time">
 						<p class="current_txt">현재시간</p>
-						<p class="time" id="time">오전 09:00:00</p>
+						<p class="time" id="time"></p>
 					</div>
 					<div class="work_btn">
 						<p class="in_office"><a data-toggle="modal" data-target="#m_work"><img src="images/gps-ico.png"/>GPS 출근</a></p>
