--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="footer_menu">
 					<ul>
 						<li class="home_ico on"><a href="index.html"><span class="home_img">홈 이미지</span>홈</a></li>
-						<li class="report_ico"><a href="page/record.html"><span class="report_img">출퇴근기록</span>출퇴근기록</a></li>
+						<li class="report_ico"><a href="page/record_no_script.html"><span class="report_img">출퇴근기록</span>출퇴근기록</a></li>
 					</ul>
 				</div>
 			</div>
