--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title">출근시간 수정</h4>
+						<h4 class="modal-title">퇴근시간 수정</h4>
 					</div>
 					<div class="modal-body">
 						<div class="time_picker">
