--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
 						<div class="time_picker">
 							<div class="pick_area">
 								<div class="time">
-									<div class="prev action-next"></div>
+									<div class="up action-next"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 									<div class="ti_tx"><input type="text" class="timepicki-input" value="09"></div>
-									<div class="next action-prev"></div>
+									<div class="down action-next"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
 								</div>
 								<div class="underbar">
 									<p>:</p>
 								</div>
 								<div class="mins">
-									<div class="prev action-next"></div>
+									<div class="up action-next"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 									<div class="mi_tx"><input type="text" class="timepicki-input" value="00"></div>
-									<div class="next action-prev"></div>
+									<div class="down action-next"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
 								</div>
 								<div class="meridian">
 									<div class="mer_tx"><button class="apm">AM</button></div>
@@ -216,17 +216,17 @@
 						<div class="time_picker">
 							<div class="pick_area">
 								<div class="time">
-									<div class="prev action-next"></div>
+									<div class="up action-next"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 									<div class="ti_tx"><input type="text" class="timepicki-input" value="09"></div>
-									<div class="next action-prev"></div>
+									<div class="down action-next"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
 								</div>
 								<div class="underbar">
 									<p>:</p>
 								</div>
 								<div class="mins">
-									<div class="prev action-next"></div>
+									<div class="up action-next"><i class="fa fa-angle-up" aria-hidden="true"></i></div>
 									<div class="mi_tx"><input type="text" class="timepicki-input" value="00"></div>
-									<div class="next action-prev"></div>
+									<div class="down action-next"><i class="fa fa-angle-down" aria-hidden="true"></i></div>
 								</div>
 								<div class="meridian">
 									<div class="mer_tx"><button class="apm">AM</button></div>
