레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="modal-wrap">
 						<div class="now_info">
 							<div class="calendar">
-								<p>2020.08.12 수요일</p>
+								<p><span class="calendar_ico">달력 아이콘</span>2020. 08. 12 수요일</p>
 								<!--<p><input id="calendar" class="calendar" placeholder="2020. 08"/></p>-->
 							</div>
 							<div class="now">
@@ -159,6 +159,7 @@
 										<label class="label needed" for="work_off">퇴근</label>
 										<input type="text" name="keyword" class="form_box form-control" id="#t_off" data-toggle="modal" data-target="#t_off" placeholder="퇴근시간 입력"/>
 										<button class="txt_clear btn form-control-clear">지우기</button>
+									</div>
 									<p class="invalid">퇴근시간을 입력 해 주세요.</p>
 								</div>
 								<div class="label_list">
@@ -179,7 +180,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
 					<div class="modal-footer">
 						<button class="work_com" type="button">신청하기</button>
 					</div>
