파일첨부폼 추가, 폼 : 테이블로 변경

--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
 		<!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
 		<title>Walk2Work</title>
 		<!-- 부트스트랩 -->
+
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/default.css">
 		<link rel="stylesheet" href="css/tempusdominus-bootstrap-4.css" />
 
-		<link rel="stylesheet" href="css/jquery.timepicker.css">
+		<!--<link rel="stylesheet" href="css/jquery.timepicker.css">-->
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!--<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>-->
+
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 		<script type="text/javascript" src="js/ko.js"></script>
 		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.iwtInputClearButtonController-0.9.0.js"></script>
-		<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-	    <script src="https://cdn.rawgit.com/digitalBush/jquery.maskedinput/1.4.1/dist/jquery.maskedinput.min.js"></script>
-		<script type="text/javascript" src="js/monthpicker.js"></script>
-		<script type="text/javascript" src="js/month_my.js"></script>
-		<script type="text/javascript" src="js/jquery.timepicker.min.js"></script>
+		<script type="text/javascript" src="js/jquery.iwtInputClearButtonController-0.9.0.js"></script>
+		<!--<script type="text/javascript" src="../js/monthpicker.js"></script>
+		<script type="text/javascript" src="../js/month_my.js"></script>-->
+		<!--<script type="text/javascript" src="../js/jquery.timepicker.min.js"></script>-->
+	    <!--
+		<script src="https://cdn.rawgit.com/digitalBush/jquery.maskedinput/1.4.1/dist/jquery.maskedinput.min.js"></script>
+		-->
 	</head>
 	<body>
 		<div id="wrap">
