--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>Walk2Work</title>
 		<!-- 부트스트랩 -->
 
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="css/default.css">
 		<link rel="stylesheet" href="css/tempusdominus-bootstrap-4.css" />
 
@@ -16,11 +16,12 @@
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!--<script type="text/javascript" src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>-->
-
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/velocity.js"></script>
+		<script type="text/javascript" src="js/velocity.ui.js"></script>
+		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 		<script type="text/javascript" src="js/ko.js"></script>
-		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
-		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/jquery.iwtInputClearButtonController-0.9.0.js"></script>
 		<!--<script type="text/javascript" src="../js/monthpicker.js"></script>
 		<script type="text/javascript" src="../js/month_my.js"></script>-->
@@ -59,7 +60,7 @@
 						<p><a href="#">PHOTO 출근</a></p>-->
 					</div>
 					<div class="adm_modify">
-						<p class="modify_btn"><a data-toggle="modal" data-target="#mon_modify">근태기록 변경요청</a></p>
+						<p class="modify_btn"><a data-toggle="modal" role="button" href="#mon_modify">근태기록 변경요청</a></p>
 					</div>
 					<div class="commute_info">
 						<div class="current_time in_time">
@@ -88,7 +89,7 @@
 		</div>
 
 		<!-- 출근 모달 -->
-		<div class="modal m_work" id="m_work_in" tabindex="-1">
+		<div class="modal m_work" id="m_work_in" tabindex="-1" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -105,7 +106,7 @@
 			</div>
 		</div>
 
-		<div class="modal m_work" id="m_work_out" tabindex="-1">
+		<div class="modal m_work" id="m_work_out" tabindex="-1" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -125,61 +126,115 @@
 		<!-- 출근 모달 끝 -->
 
 		<!-- 근태기록 수정 모달 -->
-		<div class="modal" id="mon_modify" backdrop="static" tabindex="-1">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title">근태기록 변경요청</h4>
-				</div>
-				<div class="modal-body">
-					<div class="modal-wrap">
-						<div class="now_info">
-							<div class="calendar">
-								<p><span class="calendar_ico">달력 아이콘</span>2020. 08. 12 수요일</p>
-								<!--<p><input id="calendar" class="calendar" placeholder="2020. 08"/></p>-->
-							</div>
-							<div class="now">
-								<p class="txt_left">근무시간</p>
-								<p class="txt_right">9시간 00분<br><span class="modal_time">AM 09:00 - PM 06:00</span></p>
-							</div>
-							<div class="now">
-								<p class="txt_left">근무장소</p>
-								<p class="txt_right">서울 넷마블 본사</p>
-							</div>
-						</div>
-						<div class="work_form">
-							<h2>근태수정</h2>
-							<div class="work_modify">
-								<div class="label_list">
-									<div class="label_form">
-										<label class="label needed" for="work_on">출근</label>
-										<input type="text" name="keyword" class="form_box form-control" id="work_on"  placeholder="출근시간 입력" data-toggle="modal" data-target="#t_on"/>
-										<button class="txt_clear btn form-control-clear">지우기</button>
-									</div>
-									<p class="invalid">출근시간을 입력 해 주세요.</p>
+		<div class="modal" id="mon_modify" role="dialog" data-easein="slideUpBigIn" tabindex="-1">
+            <div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title">근태기록 변경요청</h4>
+					</div>
+					<div class="modal-body">
+						<div class="modal-wrap">
+							<div class="now_info">
+								<div class="calendar">
+									<p><span class="calendar_ico">달력 아이콘</span>2020. 08. 12 수요일</p>
+									<!--<p><input id="calendar" class="calendar" placeholder="2020. 08"/></p>-->
 								</div>
-								<div class="label_list">
-									<div class="label_form">
-										<label class="label needed" for="work_off">퇴근</label>
-										<input type="text" name="keyword" class="form_box form-control" id="#t_off" data-toggle="modal" data-target="#t_off" placeholder="퇴근시간 입력"/>
-										<button class="txt_clear btn form-control-clear">지우기</button>
-									</div>
-									<p class="invalid">퇴근시간을 입력 해 주세요.</p>
+								<div class="now">
+									<p class="txt_left">근무시간</p>
+									<p class="txt_right">9시간 00분<br><span class="modal_time">AM 09:00 - PM 06:00</span></p>
 								</div>
-								<div class="label_list">
-									<div class="label_form">
-										<label class="label needed" for="work_location">출근장소</label>
-										<input type="text" name="keyword" class="form_box form-control" id="work_location" placeholder="퇴근장소 입력" data-target="#work_ㅐoff_time">
-										<button class="txt_clear btn form-control-clear">지우기</button>
-									</div>
-									<p class="invalid">출근장소를 입력 해 주세요.</p>
+								<div class="now">
+									<p class="txt_left">근무장소</p>
+									<p class="txt_right">서울 넷마블 본사</p>
 								</div>
-								<div class="label_list">
-									<div class="label_form">
-										<label class="label needed" for="work_msg">요청사유</label>
-										<textarea type="text" rows="5"name="keyword" class="form_box form-control" id="work_msg" placeholder="요청사유"></textarea>
+							</div>
+							<div class="work_form">
+								<h2>근태수정</h2>
+								<div class="work_modify">
+									<table>
+										<tr>
+											<td class="form">
+												<label class="label needed" for="work_on">출근</label>
+											</td>
+											<td>
+												<input type="text" name="keyword" class="form_box form-control" id="work_on" placeholder="출근시간 입력" data-toggle="modal" data-target="#t_on"/>
+												<button class="txt_clear btn form-control-clear">지우기</button>
+												<span class="invalid">출근시간을 입력 해 주세요.</span>
+											</td>
+										</tr>
+										<tr>
+											<td class="form">
+												<label class="label needed" for="work_off">퇴근</label>
+											</td>
+											<td>
+												<input type="text" name="keyword" class="form_box form-control" id="work_off" placeholder="퇴근시간 입력" data-toggle="modal" data-target="#t_off"/>
+												<button class="txt_clear btn form-control-clear">지우기</button>
+												<span class="invalid">퇴근시간을 입력 해 주세요.</span>
+											</td>
+										</tr>
+										<tr>
+											<td class="form">
+												<label class="label needed" for="work_location">출근장소</label>
+											</td>
+											<td>
+												<input type="text" name="keyword" class="form_box form-control" id="work_location" placeholder="퇴근장소 입력" data-target="#work_off_time">
+												<button class="txt_clear btn form-control-clear">지우기</button>
+												<span class="invalid">요청사유를 입력 해 주세요.</span>
+											</td>
+										</tr>
+										<tr>
+											<td class="form">
+												<label class="label needed" for="work_msg">요청사유</label>
+											</td>
+											<td>
+												<textarea type="text" rows="5"name="keyword" class="form_box form-control" id="work_msg" placeholder="요청사유"></textarea>
+												<span class="invalid">요청사유를 입력 해 주세요.</span>
+											</td>
+										</tr>
+										<tr>
+											<td class="form">
+												<label class="label needed" for="work_msg">파일첨부</label>
+											</td>
+											<td>
+												<input type="file" name="keyword" class="form_box form-control" id="work_location" placeholder="파일첨부" data-target="#work_off_time">
+											</td>
+										</tr>
+									</table>
+
+									<!--
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_on">출근</label>
+											<input type="text" name="keyword" class="form_box form-control" id="work_on"  placeholder="출근시간 입력" data-toggle="modal" data-target="#t_on"/>
+											<button class="txt_clear btn form-control-clear">지우기</button>
+										</div>
+										<p class="invalid">출근시간을 입력 해 주세요.</p>
 									</div>
-									<p class="invalid">요청사유를 입력 해 주세요.</p>
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_off">퇴근</label>
+											<input type="text" name="keyword" class="form_box form-control" id="#t_off" data-toggle="modal" data-target="#t_off" placeholder="퇴근시간 입력"/>
+											<button class="txt_clear btn form-control-clear">지우기</button>
+										</div>
+										<p class="invalid">퇴근시간을 입력 해 주세요.</p>
+									</div>
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_location">출근장소</label>
+											<input type="text" name="keyword" class="form_box form-control" id="work_location" placeholder="퇴근장소 입력" data-target="#work_ㅐoff_time">
+											<button class="txt_clear btn form-control-clear">지우기</button>
+										</div>
+										<p class="invalid">출근장소를 입력 해 주세요.</p>
+									</div>
+									<div class="label_list">
+										<div class="label_form">
+											<label class="label needed" for="work_msg">요청사유</label>
+											<textarea type="text" rows="5"name="keyword" class="form_box form-control" id="work_msg" placeholder="요청사유"></textarea>
+										</div>
+										<p class="invalid">요청사유를 입력 해 주세요.</p>
+									</div>
+									-->
 								</div>
 							</div>
 						</div>
@@ -193,7 +248,7 @@
 		<!-- 근태기록 수정 모달 끝 -->
 
 		<!-- 시간 수정 모달 -->
-		<div class="modal work_time" id="t_on" backdrop="static" tabindex="-1">
+		<div class="modal work_time" id="t_on" tabindex="-1" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -240,7 +295,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal work_time" id="t_off" backdrop="static" tabindex="-1">
+		<div class="modal work_time" id="t_off" tabindex="-1" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -328,6 +383,15 @@ function time(){
 					orientation: 'bottom auto'
 				});
 			});
+		</script>
+
+		 <script>
+			$(".modal").each(function(l){
+				$(this).on("show.bs.modal",
+				function(l){
+					var o=$(this).attr("data-easein");"shake"==o?$(".modal-dialog").velocity("callout."+o):"pulse"==o?$(".modal-dialog").velocity("callout."+o):"tada"==o?$(".modal-dialog").velocity("callout."+o):"flash"==o?$(".modal-dialog").velocity("callout."+o):"bounce"==o?$(".modal-dialog").velocity("callout."+o):"swing"==o?$(".modal-dialog").velocity("callout."+o):$(".modal-dialog").velocity("transition."+o)
+				})
+			});	
 		</script>
 	</body>
 </html>
