--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</div>
 
 		<!-- 출근 모달 -->
-		<div class="modal m_work" id="m_work_in" tabindex="-1" data-easein="slideUpBigIn">
+		<div class="modal m_work" id="m_work_in" tabindex="-1" role="dialog" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -97,7 +97,7 @@
 			</div>
 		</div>
 
-		<div class="modal m_work" id="m_work_out" tabindex="-1" data-easein="slideUpBigIn">
+		<div class="modal m_work" id="m_work_out" role="dialog" tabindex="-1" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -239,7 +239,7 @@
 		<!-- 근태기록 수정 모달 끝 -->
 
 		<!-- 시간 수정 모달 -->
-		<div class="modal work_time" id="t_on" tabindex="-1" data-easein="slideUpBigIn">
+		<div class="modal work_time" id="t_on" tabindex="-1" role="dialog" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -286,7 +286,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal work_time" id="t_off" tabindex="-1" data-easein="slideUpBigIn">
+		<div class="modal work_time" id="t_off" tabindex="-1" role="dialog" data-easein="slideUpBigIn">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
