다중파일 업로드

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 												<label class="label needed" for="work_msg">파일첨부</label>
 											</td>
 											<td>
-												<input type="file" name="keyword" class="form_box form-control" id="work_location" placeholder="파일첨부" data-target="#work_off_time">
+												<input type="file" name="keyword" class="form_box form-control" id="work_location" placeholder="파일첨부" data-target="#work_off_time" multiple>
 											</td>
 										</tr>
 									</table>
