--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/velocity.js"></script>
 		<script type="text/javascript" src="js/velocity.ui.js"></script>
-		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 		<script type="text/javascript" src="js/ko.js"></script>
+		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
 		<script type="text/javascript" src="js/jquery.iwtInputClearButtonController-0.9.0.js"></script>
 	</head>
 	<body>
@@ -188,7 +188,7 @@
 												<label class="label needed" for="work_msg">파일첨부</label>
 											</td>
 											<td>
-												<input type="file" name="keyword" class="form_box form-control" id="work_location" placeholder="파일첨부" data-target="#work_off_time" multiple>
+												<input type="file" class="form_box form-control" placeholder="파일첨부" multiple>
 											</td>
 										</tr>
 									</table>
