--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		<link rel="stylesheet" href="css/tempusdominus-bootstrap-4.css" />
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/jquery.MultiFile.js"></script>
 		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
 		<script type="text/javascript" src="js/velocity.js"></script>
 		<script type="text/javascript" src="js/velocity.ui.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 		<script type="text/javascript" src="js/ko.js"></script>
-		<script type="text/javascript" src="js/tempusdominus-bootstrap-4.min.js"></script>
 		<script type="text/javascript" src="js/jquery.iwtInputClearButtonController-0.9.0.js"></script>
 	</head>
 	<body>
@@ -117,7 +118,7 @@
 		<!-- 출근 모달 끝 -->
 
 		<!-- 근태기록 수정 모달 -->
-		<div class="modal" id="mon_modify" role="dialog" data-backdrop="false" data-easein="slideUpBigIn" tabindex="-1">
+		<div class="modal" id="mon_modify" data-backdrop="false" role="dialog" data-easein="slideUpBigIn" tabindex="-1">
             <div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -145,10 +146,10 @@
 								<div class="work_modify">
 									<table>
 										<tr>
-											<td class="form">
+											<td class="form" width="20%">
 												<label class="label needed" for="work_on">출근</label>
 											</td>
-											<td>
+											<td width="70%">
 												<input type="text" name="keyword" class="form_box form-control" id="work_on" placeholder="출근시간 입력" data-toggle="modal" data-target="#t_on"/>
 												<button class="txt_clear btn form-control-clear">지우기</button>
 												<span class="invalid">출근시간을 입력 해 주세요.</span>
@@ -188,44 +189,10 @@
 												<label class="label needed" for="work_msg">파일첨부</label>
 											</td>
 											<td>
-												<input type="file" class="form_box form-control" placeholder="파일첨부" multiple>
+												<input type="file" name="upload[]" class="multi max-2 with-preview" placeholder="파일첨부" multiple>
 											</td>
 										</tr>
 									</table>
-
-									<!--
-									<div class="label_list">
-										<div class="label_form">
-											<label class="label needed" for="work_on">출근</label>
-											<input type="text" name="keyword" class="form_box form-control" id="work_on"  placeholder="출근시간 입력" data-toggle="modal" data-target="#t_on"/>
-											<button class="txt_clear btn form-control-clear">지우기</button>
-										</div>
-										<p class="invalid">출근시간을 입력 해 주세요.</p>
-									</div>
-									<div class="label_list">
-										<div class="label_form">
-											<label class="label needed" for="work_off">퇴근</label>
-											<input type="text" name="keyword" class="form_box form-control" id="#t_off" data-toggle="modal" data-target="#t_off" placeholder="퇴근시간 입력"/>
-											<button class="txt_clear btn form-control-clear">지우기</button>
-										</div>
-										<p class="invalid">퇴근시간을 입력 해 주세요.</p>
-									</div>
-									<div class="label_list">
-										<div class="label_form">
-											<label class="label needed" for="work_location">출근장소</label>
-											<input type="text" name="keyword" class="form_box form-control" id="work_location" placeholder="퇴근장소 입력" data-target="#work_ㅐoff_time">
-											<button class="txt_clear btn form-control-clear">지우기</button>
-										</div>
-										<p class="invalid">출근장소를 입력 해 주세요.</p>
-									</div>
-									<div class="label_list">
-										<div class="label_form">
-											<label class="label needed" for="work_msg">요청사유</label>
-											<textarea type="text" rows="5"name="keyword" class="form_box form-control" id="work_msg" placeholder="요청사유"></textarea>
-										</div>
-										<p class="invalid">요청사유를 입력 해 주세요.</p>
-									</div>
-									-->
 								</div>
 							</div>
 						</div>
