--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 					<ul>
 						<li class="home_ico on"><a href="index.html"><span class="home_img">홈 이미지</span>홈</a></li>
 						<li class="report_ico"><a href="page/record_no_script.html"><span class="report_img">출퇴근기록</span>출퇴근기록</a></li>
+						<li class="chart_ico"><a href="page/chart.html"><span class="chart_img">리포트</span>리포트</a></li>
 					</ul>
 				</div>
 			</div>
